fixed resume spacing for printing on Windows

--- a/portfolio/static/sass/main.scss
+++ b/portfolio/static/sass/main.scss
@@ -172,7 +172,7 @@ section {
         }
 
         h2 {
-            margin: 1.5em 0 0.75em 0;
+            margin: 1.4em 0 0.75em 0;
         }
 
         h3, h4 {
